--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,7 @@
 ---
 - include_tasks: versioncheck.yml
   when: submodules_versioncheck|bool
+
+- name: add apt repos and install rspamd
+  include_tasks: packages.yml
+  when: ansible_os_family == 'Debian'
