--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,4 +1,4 @@
 ---
 # versionscheck
 playbook_version_number: 02   # should be a integer
-playbook_version_path: 'role-<some_unique_string>.version'
+playbook_version_path: 'do1jlr.rspamd.version'
