--- a/vars/main.yml
+++ b/vars/main.yml
@@ -1,4 +1,6 @@
 ---
 # versionscheck
-playbook_version_number: 02   # should be a integer
+playbook_version_number: 3   # should be a integer
 playbook_version_path: 'do1jlr.rspamd.version'
+
+_rspamd__admin_password: "{{ rspamd__admin_password | password_hash('bcrypt') }}"
