--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,4 +6,4 @@ submodules_versioncheck: false
 rspamd__config_path: '/etc/rspamd/local.d/'
 rspamd__admin_password: 'ChangeMePl3ase'
 rspamd__redis_server: '127.0.0.1'
-rspamd__multimap_conf_file: 'templates/multimap.conf.j2'
+rspamd__multimap_conf_file: 'templates/multimap.conf'
