--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -6,4 +6,10 @@ submodules_versioncheck: false
 rspamd__config_path: '/etc/rspamd/local.d/'
 rspamd__admin_password: 'ChangeMePl3ase'
 rspamd__redis_server: '127.0.0.1'
+
+# rspamd config file path
 rspamd__multimap_conf_file: 'files/multimap.conf'
+rspamd__whitelist_ip_file: 'files/whitelist_ip.map'
+rspamd__whitelist_from_file: 'files/whitelist_from.map'
+rspamd__blacklist_ip_file: 'files/blacklist_ip.map'
+rspamd__blacklist_from_file: 'files/blacklist_from.map'
