--- a/.github/workflows/ansible-debian-bullseye.yml
+++ b/.github/workflows/ansible-debian-bullseye.yml
@@ -1,5 +1,5 @@
 ---
-name: Ansible check debian:sid
+name: Ansible check debian:bullseye
 
 # yamllint disable-line rule:truthy
 on: [push, pull_request]
@@ -12,7 +12,7 @@ jobs:
       - name: 'checkout git repo'
         uses: actions/checkout@v3
 
-      - name: 'ansible check with debian:sid'
-        uses: roles-ansible/check-ansible-debian-sid-action@master
+      - name: 'ansible check with debian:bullseye'
+        uses: roles-ansible/check-ansible-debian-bullseye-action@main
         with:
           targets: "./"
