start improve apt, linting and versionscheck

--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -9,7 +9,7 @@
         mode: '0640'
         owner: "{{ rspamd__default_owner }}"
         group: "{{ rspamd__default_group }}"
-      notify: systemctl restart rspamd
+      notify: Run systemctl restart rspamd
   rescue:
     - name: you have to install passlib
       ansible.builtin.fail:
@@ -23,7 +23,7 @@
     owner: "{{ rspamd__default_owner }}"
     group: "{{ rspamd__default_group }}"
     mode: '0640'
-  notify: systemctl restart rspamd
+  notify: Run systemctl restart rspamd
 
 - name: milter_headers.conf
   become: true
@@ -33,7 +33,7 @@
     owner: "{{ rspamd__default_owner }}"
     group: "{{ rspamd__default_group }}"
     mode: '0640'
-  notify: systemctl restart rspamd
+  notify: Run systemctl restart rspamd
 
 - name: milter_headers.conf
   become: true
@@ -43,7 +43,7 @@
     owner: "{{ rspamd__default_owner }}"
     group: "{{ rspamd__default_group }}"
     mode: '0640'
-  notify: systemctl restart rspamd
+  notify: Run systemctl restart rspamd
 
 - name: Einstellug der redis.conf
   become: true
@@ -53,7 +53,7 @@
     owner: "{{ rspamd__default_owner }}"
     group: "{{ rspamd__default_group }}"
     mode: '0640'
-  notify: systemctl restart rspamd
+  notify: Run systemctl restart rspamd
 
 - name: classifier-bayes.conf
   become: true
@@ -63,7 +63,7 @@
     owner: "{{ rspamd__default_owner }}"
     group: "{{ rspamd__default_group }}"
     mode: '0640'
-  notify: systemctl restart rspamd
+  notify: Run systemctl restart rspamd
 
 - name: Einstellug der eignene black/whitelist
   become: true
@@ -73,7 +73,7 @@
     owner: "{{ rspamd__default_owner }}"
     group: "{{ rspamd__default_group }}"
     mode: '0640'
-  notify: systemctl restart rspamd
+  notify: Run systemctl restart rspamd
 
 - name: multimap whitelist_ip.map
   become: true
@@ -83,7 +83,7 @@
     owner: "{{ rspamd__default_owner }}"
     group: "{{ rspamd__default_group }}"
     mode: '0640'
-  notify: systemctl restart rspamd
+  notify: Run systemctl restart rspamd
 
 - name: multimap whitelist_from.map
   become: true
@@ -93,7 +93,7 @@
     owner: "{{ rspamd__default_owner }}"
     group: "{{ rspamd__default_group }}"
     mode: '0640'
-  notify: systemctl restart rspamd
+  notify: Run systemctl restart rspamd
 
 - name: multimap blacklist_ip.map
   become: true
@@ -103,7 +103,7 @@
     owner: "{{ rspamd__default_owner }}"
     group: "{{ rspamd__default_group }}"
     mode: '0640'
-  notify: systemctl restart rspamd
+  notify: Run systemctl restart rspamd
 
 - name: multimap blacklist_from.map
   become: true
@@ -113,4 +113,4 @@
     owner: "{{ rspamd__default_owner }}"
     group: "{{ rspamd__default_group }}"
     mode: '0640'
-  notify: systemctl restart rspamd
+  notify: Run systemctl restart rspamd
