--- a/tasks/packages.yml
+++ b/tasks/packages.yml
@@ -1,27 +1,28 @@
 ---
-- name: update repo-cache for debian/ubuntu
+- name: Update repo-cache for debian/ubuntu
   become: true
   ansible.builtin.apt:
     update_cache: true
     cache_valid_time: 3600
 
-- name: install requirements to add new package repos
+- name: Install requirements to add new package repos
   become: true
   ansible.builtin.apt:
-    name:
-      - lsb-release
-      - wget
-      - debian-goodies
-      - apt-dater-host
-      - apt-transport-https
+    name: "{{ item }}"
     state: present
+  loop:
+    - 'lsb-release'
+    - 'wget'
+    - 'debian-goodies'
+    - 'apt-dater-host'
+    - #apt-transport-https'
 
 - name: add rspam repo key
   become: true
   ansible.builtin.apt_key:
     url: 'https://rspamd.com/apt-stable/gpg.key'
-    state: present
-  notify: sudo apt update
+    state: 'present'
+  notify: Run sudo apt update
 
 - name: Download /etc/apt/keyrings/rspamd.gpg
   become: true
@@ -32,28 +33,28 @@
     owner: 'root'
     group: 'root'
 
-- name: add rspamd repo
+- name: Add rspamd repo
   become: true
   ansible.builtin.apt_repository:
     repo: "deb [signed-by=/etc/apt/keyrings/rspamd.gpg] https://rspamd.com/apt-stable/ {{ ansible_distribution_release }} main"
     state: present
     mode: 0644
-  notify: sudo apt update
+  notify: Run sudo apt update
 
-- name: add rspamd srv-repo
+- name: Add rspamd srv-repo
   become: true
   ansible.builtin.apt_repository:
     repo: "deb-src [signed-by=/etc/apt/keyrings/rspamd.gpg] https://rspamd.com/apt-stable/ {{ ansible_distribution_release }} main"
     state: present
     mode: 0644
-  notify: sudo apt update
+  notify: Run sudo apt update
 
-- name: run update if something changed
+- name: Run update if something changed
   ansible.builtin.meta: flush_handlers
 
-- name: install rspamd
+- name: Install rspamd
   become: true
   ansible.builtin.apt:
     name: rspamd
     state: present
-  notify: systemctl restart rspamd
+  notify: Run systemctl restart rspamd
