--- a/.github/workflows/ansible-linting-check.yml
+++ b/.github/workflows/ansible-linting-check.yml
@@ -20,3 +20,4 @@ jobs:
         uses: ansible-actions/ansible-lint-action@v1.0.2
         with:
           target: "./"
+          python_dependency_file: 'requirements.txt'
